* Changed: improved the Twitter credentials storing technology.
* Fixed: "#49: To authorize the second session, TheQube has to be restarted":https://github.com/Oire/theqube/issues/49. Thanks to Manuel Cortéz for this lovely fix!
* Fixed: "#56: If a user follows, unfollows or blocks someone, TheQube doesn't check for repeating actions":https://github.com/Oire/theqube/issues/56.
* Fixed: Google translation is back again.
* Fixed: errors in Brazilian Portuguese translation preventing TheQube from working normally.

h2. TheQube 0.7.1

* New: added the "qps.ru":http://qps.ru URL shortening service.
* Fixed: Temporarily removed non-working URL shortening services, namely onj.me and xed.cc as they require a CAPTCHA now.
* Fixed: "#29: Log files grow to insane sizes":https://github.com/Oire/theqube/issues/29. For now the maximum filesize is set to 100 kb.
* Fixed: Posting audio is back.
* Fixed: Pressing *Enter* doesn't add a new line on sending a tweet.


h2. TheQube 0.7

h3. Changes

* Now the application is called TheQube (without a space) and versioned according to usually adopted system _major.minor.patch_. And, until the first stable version is released, the first digit will be zero, so this version is 0.7.
* The Speech and Braille panels in the global TheQube configuration are consolidated into one panel as the Braille panel contained only one check box.
* The tweets translation service is back ("#27":https://github.com/Oire/TheQube/issues/27)
* The audio links from rebranded AudioBoom are supported.
* Now TheQube has a permanent multilingual "website":http://theqube.oire.org
* Now *Ctrl+BackSpace* works in new message dialogs, allowing to delete previous word.
* Now the website address in the profile info dialog won't be shortened with _t.co_.
* Now the profile info dialog shows also the number of users that added the current user to their lists.