@@ -8,6 +8,7 @@ h2. TheQube 0.8
 * Изменено: Улучшена технология хранения данных учётной записи Твиттера.
 * Исправлено: "#49: Для авторизации второй сессии требуется перезапуск TheQube":https://github.com/Oire/theqube/issues/49. Благодарим Мануэля Кортеса за это замечательное исправление!
 * Исправлено: "#56: При чтении, прекращении чтения и блокировании TheQube не проверяет на повтор действия":https://github.com/Oire/theqube/issues/56.
+* Исправлено: "#48: Пропадание переводов строки при чтении твита":https://github.com/Oire/TheQube/issues/48.
 * Исправлено: Переводчик Google снова с нами.
 * Исправлено: ошибки в переводе на португальский (Бразилия), которые мешали TheQube нормально функционировать.
 
