@@ -8,6 +8,7 @@ h2. TheQube 0.8
 * Changed: improved the Twitter credentials storing technology.
 * Fixed: "#49: To authorize the second session, TheQube has to be restarted":https://github.com/Oire/theqube/issues/49. Thanks to Manuel Cortéz for this lovely fix!
 * Fixed: "#56: If a user follows, unfollows or blocks someone, TheQube doesn't check for repeating actions":https://github.com/Oire/theqube/issues/56.
+* Fixed: "#48: Line breaks ignored when viewing a tweet":https://github.com/Oire/TheQube/issues/48.
 * Fixed: Google translation is back again.
 * Fixed: errors in Brazilian Portuguese translation preventing TheQube from working normally.
 
